@@ -1,7 +1,25 @@
-package com.hyf.jvm.alloc;/**
- * 
- * 
+package com.hyf.jvm.alloc;
+
+/**
+ * 4. 动态对象年龄判定
+ * <p>
+ * VM参数: -verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=15 -XX:+PrintTenuringDistribution
+ *
  * @author baB_hyf
  * @date 2021/04/08
- */public class Age {
+ */
+public class Age {
+
+    private static final int _1MB = 1024 * 1024;
+
+    @SuppressWarnings("unused")
+    public static void main(String[] args) {
+        byte[] allocation1, allocation2, allocation3, allocation4;
+        allocation1 = new byte[_1MB / 4]; // allocation1 + allocation2大于survivor空间一半
+        allocation2 = new byte[_1MB / 4];
+        allocation3 = new byte[4 * _1MB];
+        allocation4 = new byte[4 * _1MB];
+        allocation4 = null;
+        allocation4 = new byte[4 * _1MB];
+    }
 }
