@@ -1,7 +1,32 @@
-package com.hyf.jvm.alloc;/**
- * 
- * 
+package com.hyf.jvm.alloc;
+
+/**
+ * 5. 空间分配担保
+ * <p>
+ * VM参数: -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:HandlePromotionFailure=false
+ * <p>
+ * -XX:HandlePromotionFailure=true 再次尝试
+ *
  * @author baB_hyf
  * @date 2021/04/08
- */public class Guarantee {
+ */
+public class Guarantee {
+
+    private static final int _1MB = 1024 * 1024;
+
+    @SuppressWarnings("unused")
+    public static void main(String[] args) {
+        byte[] allocation1, allocation2, allocation3, allocation4, allocation5, allocation6, allocation7;
+        allocation1 = new byte[2 * _1MB];
+        allocation2 = new byte[2 * _1MB];
+        allocation3 = new byte[2 * _1MB];
+        allocation1 = null;
+        allocation4 = new byte[2 * _1MB];
+        allocation5 = new byte[2 * _1MB];
+        allocation6 = new byte[2 * _1MB];
+        allocation4 = null;
+        allocation5 = null;
+        allocation6 = null;
+        allocation7 = new byte[2 * _1MB];
+    }
 }
