@@ -1,7 +1,26 @@
-package com.hyf.jvm.alloc;/**
- * 
- * 
+package com.hyf.jvm.alloc;
+
+/**
+ * 3. 长期存活的对象将进入老年代
+ * <p>
+ * VM参数: -verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=1 -XX:+PrintTenuringDistribution
+ * <p>
+ * MaxTenuringThreshold可改为15再次尝试
+ *
  * @author baB_hyf
  * @date 2021/04/08
- */public class Old_Long {
+ */
+public class Old_Long {
+
+    private static final int _1MB = 1024 * 1024;
+
+    @SuppressWarnings("unused")
+    public static void main(String[] args) {
+        byte[] allocation1, allocation2, allocation3;
+        allocation1 = new byte[_1MB / 4]; // 什么时候进入老年代决定于XX:MaxTenuringThreshold设置
+        allocation2 = new byte[4 * _1MB];
+        allocation3 = new byte[4 * _1MB];
+        allocation3 = null;
+        allocation3 = new byte[4 * _1MB];
+    }
 }
